--- a/CRUD-ANGULAR/src/app/app.component.html
+++ b/CRUD-ANGULAR/src/app/app.component.html
@@ -1,3 +1,5 @@
-<app-menu></app-menu>
-
-<router-outlet></router-outlet>
+<app-menu></app-menu> <!-- Es nuestro componnete Menú (Navbar) que se encuentra en la carpeta share-->
+  <div class="container mt-5">
+    <h1>{{title}}</h1>
+  </div>
+<router-outlet></router-outlet> <!-- De suma importancia para que nuestras paginas se redirijan-->
