--- a/CRUD-ANGULAR/src/app/componentes/shared/menu/menu.component.html
+++ b/CRUD-ANGULAR/src/app/componentes/shared/menu/menu.component.html
@@ -8,10 +8,10 @@
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="navbar-nav me-auto mb-2 mb-lg-0">
         <li class="nav-item">
-          <a class="nav-link active">Agregar</a>
+          <a class="nav-link" routerLink="/agregar" routerLinkActive="active">Agregar</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link">Volver</a>
+          <a class="nav-link" routerLink="/" routerLinkActive="active">Volver</a>
         </li>
       </ul>
     </div>
